<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movieImageView"
            android:layout_width="@dimen/poster_width"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/view_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

        <TextView
            android:id="@+id/movieTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:text="@string/movie_title"
            android:textColor="@color/gray"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movieImageView"
            app:layout_constraintTop_toTopOf="@+id/movieImageView" />

        <TextView
            android:id="@+id/movieSummaryTextView"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:lines="3"
            android:singleLine="false"
            android:text="@string/movie_summary"
            android:textColor="@color/lighter_gray"
            android:textSize="@dimen/summary_text_size"
            app:layout_constraintStart_toStartOf="@+id/movieTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView" />

        <TextView
            android:id="@+id/movieDurationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_duration"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/duration_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/movieImageView"
            app:layout_constraintStart_toStartOf="@+id/movieTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/movieSummaryTextView" />

        <TextView
            android:id="@+id/movieReleaseDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="@dimen/margin_half"
            android:text="@string/movie_release_date"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/summary_text_size"
            app:layout_constraintBottom_toTopOf="@+id/movieSummaryTextView"
            app:layout_constraintStart_toEndOf="@+id/movieTitleTextView"
            app:layout_constraintTop_toTopOf="@+id/movieTitleTextView"
            app:layout_constraintVertical_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>